--- a/about.html
+++ b/about.html
@@ -2,4 +2,5 @@
 layout: default
 ---
 
-Yo ! 
+Yo ! I'm Şükrü BEZEN, computer engineer graduated from METU. I am focused on data visualization.<br><br>
+In addition, I love dancing, gonna play in "Across The Universe" musical of Lemur Sanat in November 2014. 
