Update about me page

--- a/about.html
+++ b/about.html
@@ -1,6 +1,12 @@
 ---
 layout: default
 ---
+Hey there!
+You are reading the summary of Şükrü BEZEN, if you came here by accident, you can leave now. <br><br>
 
-Yo ! I'm Şükrü BEZEN, computer engineer graduated from METU. I am focused on data visualization.<br><br>
-In addition, I love dancing, gonna play in "Across The Universe" musical of Lemur Sanat in November 2014. 
+I completed my undergraduate degree at Computer Engineering, METU.<br>
+I completed my MSc. degree at Computer Engineering, METU in the topic of Recommendation Systems<br><br>
+
+I like competitive programming, my Hackerrank profile: <a href='https://www.hackerrank.com/skr'>https://www.hackerrank.com/skr</a>
+
+I am currently working as a data scientist at Metglobal.
