--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@ You are reading the summary of Şükrü BEZEN, if you came here by accident, you
 
 I completed my undergraduate degree at Computer Engineering, METU.<br>
 I completed my MSc. degree at Computer Engineering, METU in the topic of Recommendation Systems<br><br>
+I'm currently having my 2nd MSc. degree at Cognitive Science, METU<br><br>
 
 I like competitive programming, my Hackerrank profile: <a href='https://www.hackerrank.com/skr'>https://www.hackerrank.com/skr</a>
 
-I am currently working as a data scientist at Metglobal.
+I am currently unemployed.
