Update aboutme page

--- a/about.html
+++ b/about.html
@@ -1,13 +1,17 @@
 ---
 layout: default
 ---
-Hey there!
-You are reading the summary of Şükrü BEZEN, if you came here by accident, you can leave now. <br><br>
+Welcome, <br>
+I'm Şükrü BEZEN, you can find a summary of who I am below.<br><br>
 
-I completed my undergraduate degree at Computer Engineering, METU.<br>
-I completed my MSc. degree at Computer Engineering, METU in the topic of Recommendation Systems<br><br>
-I'm currently having my 2nd MSc. degree at Cognitive Science, METU<br><br>
+I completed my undergraduate degree at Computer Engineering, Middle East Technical University.<br>
+I completed my MSc. degree at Computer Engineering, Middle East Technical University. My specialization was on Recommendation Systems<br>
+I'm currently having my 2nd MSc. degree at Cognitive Science, Middle East Technical University. Lately I have grown an interest on brain, cognition, language of thought.<br><br>
 
-I like competitive programming, my Hackerrank profile: <a href='https://www.hackerrank.com/skr'>https://www.hackerrank.com/skr</a>
+I like competitive programming, my Hackerrank profile: <a href='https://www.hackerrank.com/skr'>https://www.hackerrank.com/skr</a><br><br>
 
-I am currently unemployed.
+I like playing games a lot. My steam profile: <a href='https://steamcommunity.com/profiles/76561198108335823/'>https://steamcommunity.com/profiles/76561198108335823/</a><br><br>
+
+I am currently working as a NLP Researcher at Deepzen.<br><br>
+
+All things I post in this blog represent only me does not represent my current employer.
